chore(MutationTesting): Strict Testing
[skip ci]

--- a/mutation-test-report/lib/mixin/logging.dart.html
+++ b/mutation-test-report/lib/mixin/logging.dart.html
@@ -312,7 +312,7 @@ td.barBg
      <table width="100%" cellpadding="1" border="0">
      <tbody><tr>
      <td class="ItemLabel" width="10%">Current display:</td>
-     <td class="ItemText" width="35%">lib\mixin\logging.dart - <a href="../../mutation-test-report.html">back to top</a></td>
+     <td class="ItemText" width="35%">lib/mixin/logging.dart - <a href="../../mutation-test-report.html">back to top</a></td>
      <td width="10%"></td>
      <td class="MiddleHeader" width="15%">Detected</td>
      <td class="MiddleHeader" width="15%">Total</td>
@@ -321,7 +321,7 @@ td.barBg
 
      <tr>
      <td class="ItemLabel" width="10%">Date:</td>
-     <td class="ItemText" width="35%">2023-01-15 17:38:14.804284</td>
+     <td class="ItemText" width="35%">2023-01-16 12:02:42.553872</td>
      <td class="ItemLabel" width="10%">Mutations:</td>
      <td class="ItemReport" width="15%">0</td>
      <td class="ItemReport" width="15%">0</td>
@@ -358,8 +358,8 @@ td.barBg
 <a name="8"><span class="lineNumber">       8 </span>  /// Create a child template with the given [function]</a>
 <a name="9"><span class="lineNumber">       9 </span>  MessageTemplate functionLog(String function) =&gt; log.function(function);</a>
 <a name="10"><span class="lineNumber">      10 </span></a>
-<a name="11"><span class="lineNumber">      11 </span>  /// Create a child template with the given [klasse]</a>
-<a name="12"><span class="lineNumber">      12 </span>  MessageTemplate classLog(Object klasse) =&gt; log.klasse(klasse);</a>
+<a name="11"><span class="lineNumber">      11 </span>  /// Create a child template with the given [className]</a>
+<a name="12"><span class="lineNumber">      12 </span>  MessageTemplate classLog(Object className) =&gt; log.klasse(className);</a>
 <a name="13"><span class="lineNumber">      13 </span>}</a>
 <a name="14"><span class="lineNumber">      14 </span></a>
 </pre>
