--- a/mutation-test-report/mutation-test-report.html
+++ b/mutation-test-report/mutation-test-report.html
@@ -321,11 +321,11 @@ td.barBg
 
      <tr>
      <td class="ItemLabel" width="10%">Date:</td>
-     <td class="ItemText" width="35%">2023-01-15 17:38:14.792343</td>
+     <td class="ItemText" width="35%">2023-01-16 12:02:42.545890</td>
      <td class="ItemLabel" width="10%">Mutations:</td>
-     <td class="ItemReport" width="15%">86</td>
-     <td class="ItemReport" width="15%">86</td>
-     <td class="ItemReportHigh" width="15%">100.0 %</td>
+     <td class="ItemReport" width="15%">256</td>
+     <td class="ItemReport" width="15%">272</td>
+     <td class="ItemReportHigh" width="15%">94.1 %</td>
      </tr>
      
      <tr>
@@ -333,12 +333,12 @@ td.barBg
      <td class="ItemText" width="35%">false</td>
      <td class="ItemLabel" width="10%">Timeouts:</td>
      <td class="ItemReport" width="15%">0</td>
-     <td class="ItemReport" width="15%">86</td>
+     <td class="ItemReport" width="15%">272</td>
      <td class="ItemReportHigh" width="15%">0.0 %</td>
      </tr>
      <tr>
      <td class="ItemLabel" width="10%">Quality rating:</td>
-     <td class="ItemText" width="35%">A</td>
+     <td class="ItemText" width="35%">B</td>
      <td class="ItemLabel" width="10%">Success:</td>
      <td class="ItemText" width="15%">true</td>
      <td class="ItemText" width="15%"></td>
@@ -359,40 +359,18 @@ td.barBg
      <tbody>
      <tr><td width="60%"></td><td width="10%"></td><td width="10%"></td><td width="10%"></td><td width="10%"></td></tr>
      <tr><td class="ItemHead" width="60%">Path</td><td class="ItemHead" width="30%" colspan="3">Detection rate</td><td class="ItemHead" width="10%">Timeouts</td></tr>
-<tr><td class="FileLink" width="60%"><a href="lib\logger.dart.html">lib\logger.dart</a></td>
+<tr><td class="FileLink" width="60%"><a href="lib/message_templates.dart.html">lib/message_templates.dart</a></td>
   <td class="ItemReport" width="10%">
   <table width="100%" cellpadding="0" border="1"><tr>
-    <td class="barHi" width="100.0%" height="10"></td>
-    <td class="barBg" width="0.0%" height="10"></td>
+    <td class="barHi" width="87.5%" height="10"></td>
+    <td class="barBg" width="12.5%" height="10"></td>
   </tr></table>
   </td>
-  <td class="ItemReportHigh" width="10%">100.0 %</td>
-  <td class="ItemReportHigh" width="10%">9 / 9</td>
-  <td class="ItemReportHigh" width="10%">0 / 9</td>
+  <td class="ItemReportHigh" width="10%">87.5 %</td>
+  <td class="ItemReportHigh" width="10%">42 / 48</td>
+  <td class="ItemReportHigh" width="10%">0 / 48</td>
 </tr>
-<tr><td class="FileLink" width="60%"><a href="lib\messages.dart.html">lib\messages.dart</a></td>
-  <td class="ItemReport" width="10%">
-  <table width="100%" cellpadding="0" border="1"><tr>
-    <td class="barHi" width="100.0%" height="10"></td>
-    <td class="barBg" width="0.0%" height="10"></td>
-  </tr></table>
-  </td>
-  <td class="ItemReportHigh" width="10%">100.0 %</td>
-  <td class="ItemReportHigh" width="10%">72 / 72</td>
-  <td class="ItemReportHigh" width="10%">0 / 72</td>
-</tr>
-<tr><td class="FileLink" width="60%"><a href="lib\message_templates.dart.html">lib\message_templates.dart</a></td>
-  <td class="ItemReport" width="10%">
-  <table width="100%" cellpadding="0" border="1"><tr>
-    <td class="barHi" width="100.0%" height="10"></td>
-    <td class="barBg" width="0.0%" height="10"></td>
-  </tr></table>
-  </td>
-  <td class="ItemReportHigh" width="10%">100.0 %</td>
-  <td class="ItemReportHigh" width="10%">5 / 5</td>
-  <td class="ItemReportHigh" width="10%">0 / 5</td>
-</tr>
-<tr><td class="FileLink" width="60%"><a href="lib\mixin\logging.dart.html">lib\mixin\logging.dart</a></td>
+<tr><td class="FileLink" width="60%"><a href="lib/mixin/logging.dart.html">lib/mixin/logging.dart</a></td>
   <td class="ItemReport" width="10%">
   <table width="100%" cellpadding="0" border="1"><tr>
     <td class="barHi" width="100.0%" height="10"></td>
@@ -402,6 +380,28 @@ td.barBg
   <td class="ItemReportHigh" width="10%">100.0 %</td>
   <td class="ItemReportHigh" width="10%">0 / 0</td>
   <td class="ItemReportHigh" width="10%">0 / 0</td>
+</tr>
+<tr><td class="FileLink" width="60%"><a href="lib/logger.dart.html">lib/logger.dart</a></td>
+  <td class="ItemReport" width="10%">
+  <table width="100%" cellpadding="0" border="1"><tr>
+    <td class="barMed" width="79.48717948717949%" height="10"></td>
+    <td class="barBg" width="20.51282051282051%" height="10"></td>
+  </tr></table>
+  </td>
+  <td class="ItemReportMedium" width="10%">79.5 %</td>
+  <td class="ItemReportMedium" width="10%">31 / 39</td>
+  <td class="ItemReportHigh" width="10%">0 / 39</td>
+</tr>
+<tr><td class="FileLink" width="60%"><a href="lib/messages.dart.html">lib/messages.dart</a></td>
+  <td class="ItemReport" width="10%">
+  <table width="100%" cellpadding="0" border="1"><tr>
+    <td class="barHi" width="98.91891891891892%" height="10"></td>
+    <td class="barBg" width="1.0810810810810807%" height="10"></td>
+  </tr></table>
+  </td>
+  <td class="ItemReportHigh" width="10%">98.9 %</td>
+  <td class="ItemReportHigh" width="10%">183 / 185</td>
+  <td class="ItemReportHigh" width="10%">0 / 185</td>
 </tr>
     </tbody>
 </table>
